--- a/src/components/sections/grid/grid.module.css
+++ b/src/components/sections/grid/grid.module.css
@@ -2,14 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: var(--Spacing-M);
 }
 
 .listSection {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: var(--Spacing-L);
+
   align-self: stretch;
 }
 
@@ -18,7 +17,7 @@
   flex-direction: column;
   gap: 1.5rem var(--Spacing-M);
   margin: 0;
-  padding: var(--Spacing-S);
+  padding: 0;
   list-style: none;
   align-self: stretch;
 
@@ -50,10 +49,12 @@
 }
 
 .image {
-  width: 100%;
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   overflow: hidden;
-  margin: auto;
   object-fit: contain;
+  @media (min-width: 1024px) {
+    width: 100%;
+    max-width: 100%;
+  }
 }
